[package]
name = "minigame2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
simula_camera = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
simula_video = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
simula_action = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
bevy_egui = "0.17"
bevy-inspector-egui = "0.14"
bevy_rapier3d = {version = "0.19.0"}
serde = { version = "1.0", features = ["derive"] }
