[package]
name = "minigame2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = [
    "dynamic",
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher" ] }
simula_camera = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
simula_video = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
simula_action = { git = "https://github.com/Simbotic/simula.git", branch = "bevy-v0.9.0" }
bevy_egui = "0.17"
bevy-inspector-egui = "0.14"
bevy_rapier3d = {version = "0.19.0"}
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
bevy_kira_audio = { version = "0.13.0", features = ["ogg", "wav"] }
